# AuraBadge

./: .gitignore  README.md
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: .env.example  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  config.js  contract.js  errors.js  wallet.js
frontend/src/components/: BadgeCard.jsx  StatusComparison.jsx  TxStatus.jsx  WalletConnect.jsx
frontend/src/hooks/: useBadge.js  useOffChainStats.js
scripts/: deploy.sh
