[package]
name = "aura_badge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.0.0", features = ["alloc"] }

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overlapping-marker-traits = true
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug = true
